// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualityMetrics UnconnectedQualityMetrics render renders when errored 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    service="test-service"
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
  <div
    className="QualityMetrics--Error"
  >
    Error message
  </div>
</div>
`;

exports[`QualityMetrics UnconnectedQualityMetrics render renders when loading 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    service="test-service"
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
  <LoadingIndicator
    centered={true}
    small={false}
  />
</div>
`;

exports[`QualityMetrics UnconnectedQualityMetrics render renders with metrics 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    service="test-service"
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
  <BannerText
    bannerText="test banner text"
  />
  <div
    className="QualityMetrics--Body"
  >
    <div
      className="QualityMetrics--ScoreCards"
    >
      <ScoreCard
        key="score0"
        link="trace.quality.documentation/link"
        score={
          Object {
            "key": "score0",
          }
        }
      />
      <ScoreCard
        key="score1"
        link="trace.quality.documentation/link"
        score={
          Object {
            "key": "score1",
          }
        }
      />
    </div>
    <div
      className="QualityMetrics--MetricCards"
    >
      <MetricCard
        key="metric 0"
        metric={
          Object {
            "name": "metric 0",
          }
        }
      />
      <MetricCard
        key="metric 1"
        metric={
          Object {
            "name": "metric 1",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`QualityMetrics UnconnectedQualityMetrics render renders without loading, error, or metrics 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
</div>
`;
